Revision history for Perl distribution Convert-Pheno

0.22 2024-0X-XXT00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Reduced memory usage in -stream mode by emptying CONCEPT, PERSON and VISIT_OCCURRENCE during AoH -> HoH step 

0.21 2024-06-01T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated the default value for the `treatment.interval` object
 - Fixed a warning that occurred in exact searches when the string contained leading numbers
 - Modified database search behavior to exclude numbers from the search
 - Fixed an OMOP --stream mode error where processing a single table with undefined values 
   incorrectly flagged entries as duplicates, yielding only one individual

0.20 2024-05-23T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Encapsulated default values in Default.pm
 - Refactored REDCap.pm code to be used with CSV.pm
 - Implemented basic <csv2bff> and <csv2pxf> conversions (experimental)
 - Mapping file changes:
    o Required properties in mappind file now only are 'project','id' and 'sex'
    o Added project.baselineFieldsToPropagate
    o Added new properties along with their schemas, This is the current list:
      * age,ageOfOnset,assignTermIdFromHeader,bodySite,dateOfProcedure,dictionary,drugDose,drugUnit,duration,durationUnit,familyHistory,fields,mapping,procedureCodeLabel,selector,terminology,unit
 - Fixed issue with hpo.db that had leading and trailing white spaces in columns

0.19 2024-04-24T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated how to obtain nproc for FreeBSD
 - Moved t/{ohdsi,protobuff}.t to xt/
 - Added experimental -ojsond (JSON-LD) (to be used with -i{bff|pxf}
 - Extended Unicode support
 - Separated Windows builds into a distinct workflow due to JSONLD dependency issues
 - Dynamically load JSONLD module with require (if installed)

0.18 2024-02-29T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated resources in PXF.pm
 - Added info.REDCap_columns to REDCap.pm
 - Renamed keys in REDCap mapping (schema|src|files):